// Vitest Snapshot v1

exports[`Dropdown > Dropdown baseVue demo works fine 1`] = `
<div
  class="tdesign-demo-dropdown"
  data-v-366759d4=""
>
  
  <div
    class="tdesign-demo-dropdown-trigger"
    data-v-366759d4=""
  >
    <button
      class="t-button t-size-m t-button--variant-text t-button--theme-default"
      data-v-366759d4=""
      type="button"
    >
      <span
        class="t-button__text"
      >
        
        <span
          class="tdesign-demo-dropdown__text"
          data-v-366759d4=""
        >
           下拉菜单 
          <svg
            class="t-icon t-icon-chevron-down"
            data-v-366759d4=""
          >
            <use
              href="#t-icon-chevron-down"
            />
          </svg>
        </span>
        
      </span>
    </button>
  </div>
  <!---->
  
</div>
`;

exports[`Dropdown > Dropdown buttonVue demo works fine 1`] = `
<div
  data-v-681583b7=""
>
  
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    data-v-681583b7=""
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       下拉菜单 
      
    </span>
  </button>
  <!---->
  
</div>
`;

exports[`Dropdown > Dropdown customVue demo works fine 1`] = `
<div
  data-v-17209f14=""
>
  
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default"
    data-v-17209f14=""
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       下拉菜单 
      
    </span>
  </button>
  <!---->
  
</div>
`;

exports[`Dropdown > Dropdown disabledVue demo works fine 1`] = `
<div
  class="tdesign-demo-dropdown"
  data-v-f6dc4a7e=""
>
  
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default"
    data-v-f6dc4a7e=""
    type="button"
  >
    <span
      class="t-button__text"
    >
      
      <span
        class="tdesign-demo-dropdown__text"
        data-v-f6dc4a7e=""
      >
         下拉菜单 
        <svg
          class="t-icon t-icon-chevron-down"
          data-v-f6dc4a7e=""
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
      
    </span>
  </button>
  <!---->
  
</div>
`;

exports[`Dropdown > Dropdown eventVue demo works fine 1`] = `
<div
  data-v-258223a5=""
>
  
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default"
    data-v-258223a5=""
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       下拉菜单 
      
    </span>
  </button>
  <!---->
  
</div>
`;

exports[`Dropdown > Dropdown longVue demo works fine 1`] = `
<div
  data-v-6079757e=""
>
  
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default"
    data-v-6079757e=""
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       下拉菜单 
      
    </span>
  </button>
  <!---->
  
</div>
`;

exports[`Dropdown > Dropdown multipleVue demo works fine 1`] = `
<div
  class="tdesign-demo-dropdown"
  data-v-63474756=""
>
  
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default"
    data-v-63474756=""
    type="button"
  >
    <span
      class="t-button__text"
    >
      
      <span
        class="tdesign-demo-dropdown__text"
        data-v-63474756=""
      >
         下拉菜单 
        <svg
          class="t-icon t-icon-chevron-down"
          data-v-63474756=""
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
      
    </span>
  </button>
  <!---->
  
</div>
`;

exports[`Dropdown > Dropdown slotVue demo works fine 1`] = `
<div>
  
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       下拉菜单 
      
    </span>
  </button>
  <!---->
  
</div>
`;

exports[`Dropdown > Dropdown splitVue demo works fine 1`] = ``;
